# pastepipe

./: .gitignore  .gitmodules  Pipfile  README.md  pyproject.toml  python.sh  pythonsh.toml  setup.cfg
releases/: Pipfile-0.1.0  Pipfile-0.3.0  Pipfile.lock-0.1.0  Pipfile.lock-0.1.1  Pipfile.lock-0.2.0  Pipfile.lock-0.3.0  Pipfile.lock-0.3.5  python.sh-0.3.5
src/pastepipe/: Pipfile  pastepipe.py
src/scripts/: pastepipe.py
