[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "pastepipe"
version = "0.3.0"

license = { file = "LICENSE" }

readme = "README.md"

description = "a tool that copies stdin to stdout and pastebin"
authors = [ { name = "Michael Mattie" , email = "codermattie@runbox.com" } ]

dependencies = ['requests']

[project.urls]
homepage = "https://github.com/coderofmattie/pastepipe"
repository = "https://github.com/coderofmattie/pastepipe.git"

[project.scripts]
pastepipe = "pastepipe.pastepipe:exec"


